k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        # partOfApp: api, this is also we write
        component: server
    spec:
      containers:
        - name: server
          image: kausjethdoc/complex_server
          ports:
            - containerPort: 5000
