k8s/worker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        # partOfApp: api, this is also we write
        component: worker
    spec:
      containers:
        - name: worker
          image: kausjethdoc/complex_worker
