k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - name: client-srv
      protocol: TCP
      # exposed to outside world, this port can be anything.
      port: 3000
      # Running inside the container
      targetPort: 3000
