k8s/postgres-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - name: postgres-srv
      protocol: TCP
      # exposed to outside world, this port can be anything.
      port: 5432
      # Running inside the container
      targetPort: 5432
