k8s/redis-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - name: redis-srv
      protocol: TCP
      # exposed to outside world, this port can be anything.
      port: 6379
      # Running inside the container
      targetPort: 6379
