k8s/server-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - name: server-srv
      protocol: TCP
      # exposed to outside world, this port can be anything.
      port: 5000
      # Running inside the container
      targetPort: 5000
